syntax = "proto3";

package auth;

service AuthService {
  rpc login(LoginUserDto) returns (Token) {}
  rpc createCommercial(RegisterUserDto) returns (User) {}
  rpc getHelloAuth(Empty) returns (HelloResponse) {}
  rpc DecodeToken(Token) returns (TokenStructure) {}
}

message User {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string telephoneNumber = 5;
  string password = 6;
  string role = 7;
}

message Empty {}


message HelloResponse {
  string message = 1;
}

message LoginUserDto {
  string email = 1;
  string password = 2;
}
  
message Token {
  string token = 1;
}

message RegisterUserDto {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string telephoneNumber = 4;
  string password = 5;
  string role = 6;
}

message TokenStructure {
  string id = 1;
  string role = 2;
}