// Original file: auth.proto


export interface User {
  'id'?: (string);
  'firstName'?: (string);
  'lastName'?: (string);
  'email'?: (string);
  'telephoneNumber'?: (string);
  'password'?: (string);
  'role'?: (string);
}

export interface User__Output {
  'id'?: (string);
  'firstName'?: (string);
  'lastName'?: (string);
  'email'?: (string);
  'telephoneNumber'?: (string);
  'password'?: (string);
  'role'?: (string);
}
