// Original file: user.proto


export interface RegisterUserDto {
  'firstName'?: (string);
  'lastName'?: (string);
  'email'?: (string);
  'telephoneNumber'?: (string);
  'password'?: (string);
  'role'?: (string);
}

export interface RegisterUserDto__Output {
  'firstName'?: (string);
  'lastName'?: (string);
  'email'?: (string);
  'telephoneNumber'?: (string);
  'password'?: (string);
  'role'?: (string);
}
